# sudoku-llm-reasoning

./: .env.example  .gitignore  .tool-versions  Makefile  README.md  pyproject.toml  pytest.ini
data/: sudoku.db
scripts/: __init__.py  config.py  database.py  sudoku_db_generator.py  sudoku_db_reader.py
scripts/enums/: sudoku_model_candidate_type.py
scripts/exceptions/: sudoku_db_generator_exceptions.py
scripts/factories/: sudoku_factory.py
scripts/mappers/: sudoku_mapper.py
scripts/models/: __init__.py  base_model.py  sudoku_model.py
scripts/repositories/: sudoku_model_repository.py
scripts/utils/: matrix_utils.py  sudoku_utils.py
src/sudoku_llm_reasoning/: config.py
src/sudoku_llm_reasoning/core/: compare_llm.py  sudoku.py  sudoku_reasoner.py
src/sudoku_llm_reasoning/enums/: sudoku_candidate_type.py
src/sudoku_llm_reasoning/exceptions/: sudoku_exceptions.py  sudoku_reasoner_exceptions.py
src/sudoku_llm_reasoning/mappers/: sudoku_mapper.py
src/sudoku_llm_reasoning/models/: sudoku.py
src/sudoku_llm_reasoning/schemas/: sudoku_schemas.py
src/sudoku_llm_reasoning/services/: llm_service.py  sudoku_service.py
src/sudoku_llm_reasoning/utils/: candidate_utils.py  compare_llm.py  z3_check.py
src/sudoku_llm_reasoning/utils/factories/: sudoku_factory.py
tests/: config.py  conftest.py  main_test.py  sudoku_db_generator_test.py  sudoku_factory_test.py  sudoku_reasoner_test.py
tests/factories/: sudoku_factory.py
tests/utils/: matrix_utils.py  sudoku_utils.py
