[project]
name = "sudoku-llm-reasoning"
version = "1.0.0"
description = ""
readme = "README.md"
authors = [
    { name = "nayetdet", email = "jpmoreiracampos21@gmail.com" }
]
requires-python = ">=3.11, <3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "pydantic>=2.11.9",
    "z3-solver>=4.15.3.0",
]

[dependency-groups]
scripts = [
    "peewee>=3.18.2",
    "tabulate>=0.9.0",
]
tests = [
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]

[tool.uv.workspace]
members = [
    "PYTHON=/home/nayetdet/.asdf/installs/python/pypy3.11-7.3.20",
]
