[project]
name = "sudoku-llm-reasoning"
version = "1.0.0"
description = ""
readme = "README.md"
authors = [
    { name = "nayetdet", email = "jpmoreiracampos21@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.2.1",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/api",
    "packages/webui",
]
